unpackaged/main/default/objects/Loyalty__c/fields/PG_Tenure__c.field-meta.xml
<CustomField>
    <fullName>PG_Tenure__c</fullName>
    <label>PG Tenure</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>