unpackaged/main/default/objects/Loyalty__c/validationRules/Cannot_be_Edited_due_to_Active_Campaign.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_be_Edited_due_to_Active_Campaign</fullName>
    <active>true</active>
    <description>Cannot edit Loyalty when Campaign is Active</description>
    <errorConditionFormula>AND(Campaign__r.IsActive, OR(ISCHANGED(Discount_Percentage__c), ISCHANGED(PG_Tenure__c)))</errorConditionFormula>
    <errorMessage>Loyalty Cannot be Edited because Campaign is Active.</errorMessage>
</ValidationRule>